[package]
name = "muos"
version = "0.1.0"
authors = ["Kotaro Inoue <k.musaino@gmail.com>"]
edition = "2018"

# Disable aborting on panic to avoid implementation of stack unwinding for simplicity
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
